objects/redwing__User_Certification__c.object
<CustomObject>
    <description>Hosts user external certification information.</description>
    <fields>
        <fullName>redwing__Certification_Authority__c</fullName>
        <label>Certification Authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Certification_Name__c</fullName>
        <label>Certification Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Certification_URL__c</fullName>
        <label>Certification URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>redwing__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__License_Number__c</fullName>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Certification</label>
    <nameField>
        <displayFormat>UC-{000000}</displayFormat>
        <label>User Certification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Certifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>